{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 9,
  "lineage": "51ca937e-995e-31b0-4719-716a5e803d32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:internet-gateway/igw-096c32018137b71c8",
            "id": "igw-096c32018137b71c8",
            "owner_id": "787298256381",
            "tags": {
              "Name": "terraform-prod"
            },
            "tags_all": {
              "Name": "terraform-prod"
            },
            "vpc_id": "vpc-0e8872d41039bba9d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:route-table/rtb-09301fb5a8b0e7de4",
            "id": "rtb-09301fb5a8b0e7de4",
            "owner_id": "787298256381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096c32018137b71c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_prod_table-testing"
            },
            "tags_all": {
              "Name": "Terraform_Main_prod_table-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8872d41039bba9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00db28363e01451dc",
            "route_table_id": "rtb-09301fb5a8b0e7de4",
            "subnet_id": "subnet-07e23f8f47f484277"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:security-group/sg-04555dc6a7f7f65c2",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04555dc6a7f7f65c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "787298256381",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8872d41039bba9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:subnet/subnet-07e23f8f47f484277",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-07e23f8f47f484277",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787298256381",
            "tags": {
              "Name": "Terraform_Public_prod_Subnet1-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_prod_Subnet1-testing"
            },
            "vpc_id": "vpc-0e8872d41039bba9d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:subnet/subnet-0a22c7cfc01a5534a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-0a22c7cfc01a5534a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787298256381",
            "tags": {
              "Name": "Terraform_Public_prod_Subnet2-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_prod_Subnet2-testing"
            },
            "vpc_id": "vpc-0e8872d41039bba9d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:subnet/subnet-04c7093b67d5d35fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-04c7093b67d5d35fc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787298256381",
            "tags": {
              "Name": "Terraform_Public_prod_Subnet3-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_prod_Subnet3-testing"
            },
            "vpc_id": "vpc-0e8872d41039bba9d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787298256381:vpc/vpc-0e8872d41039bba9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-042c4459c150aa4c3",
            "default_route_table_id": "rtb-0549c5eca7a644ffc",
            "default_security_group_id": "sg-0f4edda79f1909cef",
            "dhcp_options_id": "dopt-095d21dddb4c6029b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e8872d41039bba9d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0549c5eca7a644ffc",
            "owner_id": "787298256381",
            "tags": {
              "Name": "terraform-prod"
            },
            "tags_all": {
              "Name": "terraform-prod"
            }
          }
        }
      ]
    }
  ]
}